[package]
name = "proxy-rs"
version = "0.3.7"
edition = "2021"
readme = "README.md"
description = "Fast Rust-based proxy checker"
repository = "https://github.com/zevtyardt/proxy.rs"
license = "MIT"
keywords = ["proxy", "scraper", "checker", "server"]
categories = ["command-line-utilities"]
exclude = ["/data"]
authors = ["zevtyardt"]

[dependencies]
dirs = "5.0.1"
fern = "0.6.2"
log = "0.4.20"
owo-colors = "3.5.0"

