[package]
name = "proxy-rs"
version = "0.3.7"
edition = "2021"
readme = "README.md"
description = "Fast Rust-based proxy checker"
repository = "https://github.com/zevtyardt/proxy.rs"
license = "MIT"
keywords = ["proxy", "scraper", "checker", "server"]
categories = ["command-line-utilities"]
exclude = ["/data"]
authors = ["zevtyardt"]

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
fern = "0.6.2"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
log = "0.4.20"
owo-colors = "3.5.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }

