[package]
name = "proxy-rs"
version = "0.4.0"
edition = "2021"
readme = "README.md"
description = "Fast Rust-based proxy checker"
repository = "https://github.com/zevtyardt/proxy.rs"
license = "MIT"
keywords = ["proxy", "scraper", "checker", "server"]
categories = ["command-line-utilities"]
exclude = ["/data"]
authors = ["zevtyardt"]

[dependencies]
anyhow = "1.0.75"
async_once = "0.2.6"
dirs = "5.0.1"
fern = "0.6.2"
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
lazy_static = "1.4.0"
log = "0.4.20"
maxminddb = "0.23.0"
owo-colors = "3.5.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "fs"] }

